--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -1,5 +1,5 @@
-@import '../styles/custom-media.css';
-@import '../styles/custom-properties.css';
+@import "../styles/custom-media.css";
+@import "../styles/custom-properties.css";
 
 .root {
   position: relative;
@@ -104,7 +104,7 @@
     }
 
     @nest & ul li a {
-      padding: 0.5rem;
+      padding: 0.5rem 1.5rem;
     }
   }
 }
