--- a/web/src/components/main-banner.css
+++ b/web/src/components/main-banner.css
@@ -6,10 +6,17 @@
   z-index: 100;
 }
 .bg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 200px;
   color: white;
   background: black;
+}
+
+.bg > h1 {
+  text-align: center;
 }
 .wrapper {
   box-sizing: border-box;
