--- a/web/src/components/main-banner.css
+++ b/web/src/components/main-banner.css
@@ -1,31 +1,36 @@
 @import "../styles/custom-media.css";
 @import "../styles/custom-properties.css";
 
-.root {
-  position: relative;
-  z-index: 100;
-}
+/* for p5 */
+/* .bg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200px;
+} */
+
 .bg {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 200px;
-  color: white;
   background: black;
+  color: white;
 }
 
 .bg > h1 {
   text-align: center;
 }
+
 .wrapper {
   box-sizing: border-box;
   margin: 0 auto;
   max-width: 960px;
-  padding: 1em;
+  position: relative;
   display: flex;
-
-  @media (--media-min-small) {
-    padding: 1.5em 1.5em;
-  }
 }
