--- a/web/src/components/main-banner.css
+++ b/web/src/components/main-banner.css
@@ -1,8 +1,17 @@
 @import "../styles/custom-media.css";
 @import "../styles/custom-properties.css";
 
-/* for p5 */
-/* .bg {
+/* for p5 keep the heights same */
+.wrapper {
+  box-sizing: border-box;
+  margin: 0 auto;
+  max-width: 960px;
+  height: 200px;
+  position: relative;
+  display: flex;
+}
+
+.bg {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,26 +20,9 @@
   left: 0;
   width: 100%;
   height: 200px;
-} */
-
-.bg {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 200px;
-  background: black;
   color: white;
 }
 
 .bg > h1 {
   text-align: center;
-}
-
-.wrapper {
-  box-sizing: border-box;
-  margin: 0 auto;
-  max-width: 960px;
-  position: relative;
-  display: flex;
 }
