--- a/web/src/components/main-banner.css
+++ b/web/src/components/main-banner.css
@@ -11,6 +11,9 @@
   display: flex;
 }
 
+#defaultCanvas0 {
+}
+
 .bg {
   display: flex;
   justify-content: center;
@@ -21,6 +24,7 @@
   width: 100%;
   height: 200px;
   color: white;
+  background: black;
 }
 
 .bg > h1 {
